--- a/src/style.styl
+++ b/src/style.styl
@@ -110,6 +110,11 @@ header
     ul
       resetList()
 
+footer
+  margin-top: 6*spacing
+  opacity: 0.8
+  text-align: center
+
 main
   padding: 6 * spacing
 
