--- a/src/style.styl
+++ b/src/style.styl
@@ -135,6 +135,11 @@ main
     font-size: 1.5em
     margin: 0 0 spacing 0
 
+  label
+    display: inline-block
+    margin-right: spacing
+    min-width: 15 * spacing
+
   figure
     align-items: flex-start
     display: flex
