--- a/src/print.styl
+++ b/src/print.styl
@@ -28,7 +28,7 @@
     -webkit-print-color-adjust: exact
     height: 95%
 
-    .vx-axis text
+    text, .vx-line
       fill: black
 
     & > rect
