Add standard line.

--- a/src/print.styl
+++ b/src/print.styl
@@ -28,7 +28,7 @@
     -webkit-print-color-adjust: exact
     height: 95%
 
-    text, .vx-line
+    text:not(.standard), .vx-line
       fill: black
 
     #currentSprint
